cmake_minimum_required(VERSION 3.28)
project(Algo)

set(CMAKE_CXX_STANDARD 17)

add_executable(SelfAlgo leetcode/dp/2786_Visit_Array_Positions_to_Maximize_Score.cpp
        leetcode/dp/42_Trapping_Rain_Water.cpp
        leetcode/dp/804_Max_Increase_to_Keep_City_Skyline.cpp
        leetcode/dp/44_Wildcard_Matching.cpp
        leetcode/array/88_Merge_Sorted_Array.cpp
        leetcode/array/80_Remove_Duplicates_from_Sorted_Array_II.cpp
        leetcode/array/169_Majority_Element.cpp
        leetcode/array/189_Rotate_Array.cpp
        leetcode/array/189_Rotate_Array.cpp
        leetcode/array/189_Rotate_Array.cpp
        leetcode/array/121_Best_Time_to_Buy_and_Sell_Stock.cpp
        #        test.cpp
)
